[tool.poetry]
name = "ds-data-flow"
version = "0.1.0"
description = ""
authors = ["Ezra Citron <ezracitron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"
pytest = "^7.1.1"

[[tool.poetry.source]]
name = "codeartifact"
url = "https://oodle-finance-789273353433.d.codeartifact.eu-west-1.amazonaws.com/pypi/loan-processing-python/simple/"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
